--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ footer {
 
 .navbar-header > .navbar-brand:hover,
 .navbar-header > .navbar-brand:focus {
-    color: #8b27b0;
+    color: orange;
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
@@ -195,7 +195,7 @@ footer {
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #f4f4f4;
+        color: orange;
     }
 
     .navbar-default .nav > li>a,
@@ -208,7 +208,7 @@ footer {
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #fefefe;
+        color: orange;
     }
 
     .navbar-default.affix {
@@ -502,6 +502,7 @@ fieldset[disabled] .btn-default.active {
 
 .btn.btn-primary:hover {
     opacity: 0.7;
+    color: orange;
 }
 
 .btn {
@@ -535,4 +536,72 @@ img::selection {
 img::-moz-selection {
     color: #fff;
     background: 0 0;
+}
+
+.navbar-nav>li>i {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    cursor:pointer;
+}
+
+.navbar-nav>li>i:hover {
+    color: orange;
+}
+
+.social-sm li a {
+    width: 30px;
+    height: 30px;
+}
+
+.social li a {
+    display: block;
+    opacity: .5;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #fff;
+}
+
+.social li.fb a, .social li.fb a:hover {
+    background: url(../img/fb.svg) 50% no-repeat;
+    background-size: 100%;
+}
+
+.social {
+  position: absolute;
+  bottom: 100px;
+  left: 7%;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.social li {
+  float: left;
+  display: block;
+  width: 50px;
+  height: 50px;
+}
+.social li.vk {
+  margin: 0 10px;
+}
+.social li a {
+  display: block;
+  opacity: .5;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #fff;
+}
+.social li a:hover {
+  border-color: #ff7e00;
+  box-shadow: 0 0 10px 1px red, 0 0 10px 1px #ff7e00 inset;
+  opacity: 1;
+}
+.social li.vk a,
+.social li.vk a:hover {
+  background: url(../img/vk.svg) 50% no-repeat;
+  background-size: 100%;
+}
+.social li.in a,
+.social li.in a:hover {
+  background: url(../img/tw.svg) 50% no-repeat;
+  background-size: 100%;
 }
